--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,7 +8,7 @@ author_profile: true
 {% if site.author.googlescholar %}
 <!-- <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div> -->
 <div>🔬 This section will showcase my academic and technical publications. While I’m early in my research journey, I’m
-  actively working on projects in these areas:</div>
+  actively working on projects in the areas in my <a href="https://ak-boateng.github.io/portfolio/">Portfolio</a></div>
 {% endif %}
 
 {% include base_path %}
